--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "mdc-ui": "^1.0.68",
+    "mdc-ui": "^1.0.69",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^10.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
